--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@nessi/parse-server": "^4.5.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
     "parse": "^2.19.0",
     "parse-dashboard": "^2.1.0",
     "parse-server-mailgun": "^2.4.15",
