--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-http-proxy": "^1.6.2",
     "parse": "^2.19.0",
     "parse-dashboard": "^2.1.0",
+    "parse-server-jobs-scheduler": "^1.1.1",
     "parse-server-mailgun": "^2.4.15",
     "parse-server-mural-auth-adapter": "^1.0.2",
     "request": "^2.88.2",
